# userPortalDataModel

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check_version.yml
userportaldatamodel/: associated_user.py  attribute_list.py  attribute_list_value.py  attributes.py  consortium_data_contributor.py  driver.py  event.py  init_defaults.py  input_type.py  message.py  models.py  notification.py  notification_log.py  project.py  project_datapoints.py  receiver.py  request.py  schema.py  search.py  state.py  statistician.py  transition.py  user.py
userportaldatamodel/schemas/: associated_user_roles_schema.py  associated_user_schema.py  attribute_list_schema.py  attribute_list_value_schema.py  attributes_schema.py  consortium_data_contributor_schema.py  input_type_schema.py  message_schema.py  notification_schema.py  notificationlog_schema.py  project_associated_user_schema.py  project_datapoints_schema.py  project_schema.py  receiver_schema.py  request_has_state_schema.py  request_schema.py  schemas.py  search_is_shared_schema.py  search_schema.py  state_schema.py  statistician_schema.py
